global.css: fix overflow y w/ hidden
A strange space is appearing below 100%, but no element can be hovered

--- a/src/global.css
+++ b/src/global.css
@@ -6,3 +6,7 @@ body,
   height: 100%;
   width: 100%;
 }
+
+#the-expans-app {
+  overflow: hidden;
+}
